<resources>
    <string name="app_name">StopBadHabit</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- 공통 -->
    <string name="blank">%s</string>
    <string name="life">%d / %d</string>
    <string name="hr_date">%s ~ %s</string>
    <string name="hd_diary">반성일기</string>
    <string name="life_ko">라이프</string>

    <!-- 에러 -->
    <string name="habit_id_error">버릇을 불러오는 과정에 오류가 발생하였습니다.</string>


    <!-- Bottom Sheet-->
    <string name="bt_sheet_title">교정하고 싶은 버릇</string>
    <string name="bt_sheet_mobname">버릇 몬스터 이름</string>
    <string name="bt_sheet_goaldate">목표 날짜</string>
    <string name="bt_sheet_mode">난이도</string>
    <string name="bt_sheet_life">라이프 %d개로 도전합니다.</string>
    <string name="bt_sheet_setMode">난이도를 설정해주세요.</string>
    <string name="bt_sheet_setName">버릇의 이름을 설정해주세요.</string>
    <string name="bt_sheet_setNameMode">버릇의 이름과 난이도를 설정해주세요.</string>

    <!-- HomeHabitItem -->
    <string name="hhi_current_day">현재 %d일째 도전중</string>

    <!-- HabitDetail -->
    <string name="hd_current">현재 %d일째 전투중!</string>
    <string name="hd_continuity">마지막 치명타 공격으로부터 %d일 경과했어요</string>
    <string name="hd_fail">지금까지 %d번 방어 실패</string>
    <string name="hd_continuity_0">오늘 치명타 공격을 받았어요.</string>
    <string name="hd_fail_0">지금까지 모든 공격을 방어했어요!</string>
    <string name="hd_never_failed">끊임없는 치명타 공격을 가하고 있어요.</string>

    <string name="hd_current_life">현재 라이프</string>

    <string name="hd_dialog_ask">오늘 전투에서 부상을 당했습니까?</string>

    <string name="hd_tooltip">매일 버릇과의 전투에서 공격에 성공했다면 칼 버튼을, 실패했다면 방패버튼을 통해 전투를 기록해주세요! \n기록을 하지 않은 날은 실패로 간주됩니다. \n dfssdfsdfdfsdfdfdsf</string>
    <string name="hd_tooltip1">매일 버릇과의 전투에서 공격에 성공했다면 칼 버튼을, 실패했다면 방패버튼을 통해 전투를 기록해주세요!</string>
    <string name="hd_tooltip2">기록을 하지 않은 날은 실패로 간주됩니다. </string>

    <string name="hd_diary_num">No. %d</string>

    <!-- HabitDetailWrite -->
    <string name="hdw_date">날짜</string>
    <string name="hdw_time">시간</string>
    <string name="hdw_situation">상황</string>
    <string name="hdw_reason">이유</string>
    <string name="hdw_emotion">감정</string>
    <string name="hdw_promise">다짐</string>
    <string name="hdw_commit">등록</string>

    <!-- DiaryWrite -->
    <string name="dw_setPromise">다짐은 필수로 입력해주세요.</string>

    <!-- HabitReport -->
    <string name="hr_state_success">교정 성공</string>
    <string name="hr_state_fail">교정 실패</string>
    <string name="hr_fromStart">%d일 동안의 전투,</string>
    <string name="hr_result_success">마침내 몬스터를 무찔렀어요!</string>
    <string name="hr_result_fail">아쉽게 몬스터에게 패배했어요.</string>

    <!-- HabitHistory -->
    <string name="hh_empty">아직 끝난 전투가 없습니다.</string>
    <string name="hh_diary_empty">작성한 반성일기가 없습니다.</string>
    <string name="hh_toolbar">히스토리</string>

    <!-- quit -->
    <string name="quit">정말 앱을 종료하시겠습니까?</string>
    <string name="quit_yes">종료</string>
    <string name="quit_no">취소</string>
</resources>