<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_quit_dialog"
    android:padding="30dp"
    tools:context=".ui.QuitDialogFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/textView21"
        style="@style/tv_18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_quit_no"
        style="@style/tv_14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:text="@string/quit_no"
        app:layout_constraintBottom_toBottomOf="@+id/tv_quit_yes"
        app:layout_constraintEnd_toStartOf="@+id/tv_quit_yes"
        app:layout_constraintTop_toTopOf="@+id/tv_quit_yes"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_quit_yes"
        style="@style/tv_14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/quit_yes"
        android:textColor="@color/red_100"
        app:layout_constraintEnd_toEndOf="@+id/textView21"
        app:layout_constraintTop_toBottomOf="@+id/textView21" />

</androidx.constraintlayout.widget.ConstraintLayout>